--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <!DOCTYPE html>
+<html lang="zh-Hant">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ZONE：One on One</title>
+  <link rel="stylesheet" href="./style.css" />
+</head>
+<body>
 <div class="app">
   <header class="top hidden" id="topBar">
     <div class="title">
@@ -180,3 +188,6 @@
   <button id="btn-casual" type="button" onclick="setModeCasual()">一般</button>
   <button id="btn-ranked" type="button" onclick="setModeRanked()">排位</button>
 </div>
+  <script src="./script.js"></script>
+</body>
+</html>
